2010-08-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c:  The gnuplot_x11 side of Shige's fix.

2010-08-14  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/x11.trm:  The last font used inside an enhanced text string was
	not being cleared on exit.

2010-08-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/ansichek.h src/gplt_x11.c src/plot.c src/readline.c src/show.c
	src/stdfn.h src/syscfg.h term/x11.trm:  Remove conditional code for 
	another obsolete platform (OSK/OS9, used for example on TRS-80).

2010-08-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c:  OSX history command could segfault if there was no
	previous history file.

	* docs/gnuplot.doc:  Reorganize documentation for binary files.

2010-08-09  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/plot.c: More work to enable autoconfigue on OSX.

2010-08-08  Olivier Mehani  <shtrom@users.sourceforge.net>

	* src/util.c docs/gnuplot.doc:  Add ISO-IEC-80000 prefixes
	(ki Mi Gi etc) as gprintf format specifiers %b and %B, which are
	respectively the mantissa and exponent.  Also fix an out-of-range
	formatting bug.

2010-08-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c: Do not create a data record for a blank line at the end
	of the input stream.
	Bugfix.

	* src/plot2d.c (eval_plots):  Update GPVAL_DATA values after plot in
	tabulate mode just as for normal plotting mode.
	Bug #3041233

	* docs/gnuplot.doc src/gadgets.h src/graphics.c src/save.c src/set.c
	src/show.c src/tables.c src/tables.h:
	New option "set key opaque".   If requested, the code makes two passes
	over each 2D plot command.  The actual graph is drawn during the first
	pass, and the key box with plot samples is drawn during the second pass.

2010-08-05  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/command.c src/history.c src/mouse.c src/plot.c
	src/show.c:

	Finally a work-around for the broken libreadline on OSX, which is really